--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+django = "==3.2.4"
+environs = "*"
+pillow = "*"
+django-debug-toolbar = "*"
 
 [dev-packages]
 
